<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Klik Outreach</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My List</string>
    <string name="title_notifications">Options</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="send_request">Send Request</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="tv_login">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="tv_fill">Please fill this form to create an account!</string>
    <string name="tv_fill_bottom">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="select_picture">Select Display Picture</string>
    <string name="name">Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="institution_name">Institution Name</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_birthday">Enter your birth day</string>
    <string name="err_msg_gender">Enter your gender</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_institution">Enter your institution name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki">Laki-laki</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="request">Request</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_action_bar_tabs">ActionBarTabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appointment">Appointment</string>
    <string name="biomedical">Biomedical</string>
    <string name="counseling">Counseling</string>
    <string name="legal_counseling">Legal Counseling</string>
    <string name="client">Client</string>
    <string name="edit">Edit</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="signout">Sign Out</string>
    <string name="save">Save</string>
    <string name="edit_account">Edit Account</string>
    <string name="appointment_history">Appointment History</string>
    <string name="change_photo">Change Photo</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="accept_appointment">Accept Appointment</string>
    <string name="end_appointment">End Appointment</string>
    <string name="appointment_record">Appointment Record</string>
    <string name="your_rating">Your Rating</string>
    <string name="comment">Comment</string>

    <string name="revocer_description">Please fill this form to recover your password</string>

</resources>
