<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_edit_account"
    android:layout_below="@id/appbar"
    android:layout_above="@id/cvEditAcc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgEditProfile"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:src="@drawable/ic_person_signup"
            android:layout_gravity="center"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/tvChangePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/etEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="Akmal M Kristanto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"/>

        <EditText
            android:id="@+id/etEditPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="+628120010023"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/etEditUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="AkmalMK"/>

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="@string/password"/>-->

        <!--<EditText-->
            <!--android:id="@+id/etEditPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPassword"-->
            <!--android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"-->
            <!--android:text="123456789"/>-->

    </LinearLayout>

</ScrollView>