<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_above="@id/viewBottom"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bcg_login">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/field_login"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/text"
                android:textSize="16dp"
                android:hint="@string/username" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/field_login"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/text"
                android:textSize="16dp" />

            <LinearLayout
                android:id="@+id/layLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_below="@id/etPassword">

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/login"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/rectangle_button"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>