<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/rectangle_layout"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:background="#11111111"
            android:src="@drawable/icon_biomedical_white" />

        <TextView
            android:id="@+id/tvServiceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/legal_counseling"
            android:textColor="@color/default_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvServiceName"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="Sunday, 30 August 2018"
            android:textColor="#666666"
            android:textSize="11sp" />


        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignBottom="@+id/tvServiceName"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:src="@drawable/ic_close_black_24dp"
            tools:ignore="RtlCompat" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33333333" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgRequestDetail"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:scaleType="centerInside"
            android:src="@drawable/pasfoto"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="2dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#8BC34A"
            app:civ_shadow_radius="7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Reza Yuda"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#666666"
                android:text="+628117993780"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33333333" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/your_rating"
        android:textColor="#000"/>

    <ImageView
        android:id="@+id/imgRating"
        android:layout_width="match_parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rating_5"
        android:layout_height="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/comment"
            android:textColor="#000"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rectangle_layout"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:text="@string/comment"/>

    </LinearLayout>



</LinearLayout>